RESOLVED FIXED165026
[GTK] Fix introspection warning
https://bugs.webkit.org/show_bug.cgi?id=165026
Summary [GTK] Fix introspection warning
Sergio Villar Senin
Reported 2016-11-22 01:37:52 PST
[GTK] Fix introspection warning
Attachments
Patch (1.68 KB, patch)
2016-11-22 01:40 PST, Sergio Villar Senin
no flags
Sergio Villar Senin
Comment 1 2016-11-22 01:40:05 PST
Michael Catanzaro
Comment 2 2016-11-22 02:10:38 PST
Comment on attachment 295330 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=295330&action=review Thanks, you can commit the Ephy patch now too. > Source/WebKit2/WebProcess/InjectedBundle/API/gtk/WebKitWebPage.cpp:504 > + * @elements: (element-type WebKitDOMElement) (transfer none): a #GPtrArray of I'd never have figured this out!
WebKit Commit Bot
Comment 3 2016-11-22 03:14:55 PST
Comment on attachment 295330 [details] Patch Clearing flags on attachment: 295330 Committed r208961: <http://trac.webkit.org/changeset/208961>
WebKit Commit Bot
Comment 4 2016-11-22 03:14:59 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.