[GTK] Fix introspection warning https://bugs.webkit.org/show_bug.cgi?id=165026

Reviewed by Michael Catanzaro.

This fixes an introspection annotation for a new API added in r208532.

* WebProcess/InjectedBundle/API/gtk/WebKitWebPage.cpp:
(webkit_web_page_class_init):


Canonical link: https://commits.webkit.org/182669@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208961 268f45cc-cd09-0410-ab3c-d52691b4dbfc